docs/4.20/rest_api/overview/index.md
| API                                                                                                                                                                                                | API group                                   |
|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------|
| [AdminNetworkPolicy](../network_apis/adminnetworkpolicy-policy-networking-k8s-io-v1alpha1.xml#adminnetworkpolicy-policy-networking-k8s-io-v1alpha1)                                                | policy.networking.k8s.io/v1alpha1           |
| [AdminPolicyBasedExternalRoute](../network_apis/adminpolicybasedexternalroute-k8s-ovn-org-v1.xml#adminpolicybasedexternalroute-k8s-ovn-org-v1)                                                     | k8s.ovn.org/v1                              |
| [AlertingRule](../monitoring_apis/alertingrule-monitoring-openshift-io-v1.xml#alertingrule-monitoring-openshift-io-v1)                                                                             | monitoring.openshift.io/v1                  |
| [Alertmanager](../monitoring_apis/alertmanager-monitoring-coreos-com-v1.xml#alertmanager-monitoring-coreos-com-v1)                                                                                 | monitoring.coreos.com/v1                    |
| [AlertmanagerConfig](../monitoring_apis/alertmanagerconfig-monitoring-coreos-com-v1beta1.xml#alertmanagerconfig-monitoring-coreos-com-v1beta1)                                                     | monitoring.coreos.com/v1beta1               |
| [AlertRelabelConfig](../monitoring_apis/alertrelabelconfig-monitoring-openshift-io-v1.xml#alertrelabelconfig-monitoring-openshift-io-v1)                                                           | monitoring.openshift.io/v1                  |
| [APIRequestCount](../metadata_apis/apirequestcount-apiserver-openshift-io-v1.xml#apirequestcount-apiserver-openshift-io-v1)                                                                        | apiserver.openshift.io/v1                   |
| [APIServer](../config_apis/apiserver-config-openshift-io-v1.xml#apiserver-config-openshift-io-v1)                                                                                                  | config.openshift.io/v1                      |
| [APIService](../extension_apis/apiservice-apiregistration-k8s-io-v1.xml#apiservice-apiregistration-k8s-io-v1)                                                                                      | apiregistration.k8s.io/v1                   |
| [AppliedClusterResourceQuota](../schedule_and_quota_apis/appliedclusterresourcequota-quota-openshift-io-v1.xml#appliedclusterresourcequota-quota-openshift-io-v1)                                  | quota.openshift.io/v1                       |
| [Authentication](../config_apis/authentication-config-openshift-io-v1.xml#authentication-config-openshift-io-v1)                                                                                   | config.openshift.io/v1                      |
| [Authentication](../operator_apis/authentication-operator-openshift-io-v1.xml#authentication-operator-openshift-io-v1)                                                                             | operator.openshift.io/v1                    |
| [BareMetalHost](../provisioning_apis/baremetalhost-metal3-io-v1alpha1.xml#baremetalhost-metal3-io-v1alpha1)                                                                                        | metal3.io/v1alpha1                          |
| [BaselineAdminNetworkPolicy](../network_apis/baselineadminnetworkpolicy-policy-networking-k8s-io-v1alpha1.xml#baselineadminnetworkpolicy-policy-networking-k8s-io-v1alpha1)                        | policy.networking.k8s.io/v1alpha1           |
| [Binding](../metadata_apis/binding-v1.xml#binding-v1)                                                                                                                                              | v1                                          |
| [BMCEventSubscription](../provisioning_apis/bmceventsubscription-metal3-io-v1alpha1.xml#bmceventsubscription-metal3-io-v1alpha1)                                                                   | metal3.io/v1alpha1                          |
| [BrokerTemplateInstance](../template_apis/brokertemplateinstance-template-openshift-io-v1.xml#brokertemplateinstance-template-openshift-io-v1)                                                     | template.openshift.io/v1                    |
| [Build](../workloads_apis/build-build-openshift-io-v1.xml#build-build-openshift-io-v1)                                                                                                             | build.openshift.io/v1                       |
| [Build](../config_apis/build-config-openshift-io-v1.xml#build-config-openshift-io-v1)                                                                                                              | config.openshift.io/v1                      |
| [BuildConfig](../workloads_apis/buildconfig-build-openshift-io-v1.xml#buildconfig-build-openshift-io-v1)                                                                                           | build.openshift.io/v1                       |
| [BuildLog](../workloads_apis/buildlog-build-openshift-io-v1.xml#buildlog-build-openshift-io-v1)                                                                                                    | build.openshift.io/v1                       |
| [BuildRequest](../workloads_apis/buildrequest-build-openshift-io-v1.xml#buildrequest-build-openshift-io-v1)                                                                                        | build.openshift.io/v1                       |
| [CatalogSource](../operatorhub_apis/catalogsource-operators-coreos-com-v1alpha1.xml#catalogsource-operators-coreos-com-v1alpha1)                                                                   | operators.coreos.com/v1alpha1               |
| [CertificateSigningRequest](../security_apis/certificatesigningrequest-certificates-k8s-io-v1.xml#certificatesigningrequest-certificates-k8s-io-v1)                                                | certificates.k8s.io/v1                      |
| [CloudCredential](../operator_apis/cloudcredential-operator-openshift-io-v1.xml#cloudcredential-operator-openshift-io-v1)                                                                          | operator.openshift.io/v1                    |
| [CloudPrivateIPConfig](../network_apis/cloudprivateipconfig-cloud-network-openshift-io-v1.xml#cloudprivateipconfig-cloud-network-openshift-io-v1)                                                  | cloud.network.openshift.io/v1               |
| [ClusterAutoscaler](../autoscale_apis/clusterautoscaler-autoscaling-openshift-io-v1.xml#clusterautoscaler-autoscaling-openshift-io-v1)                                                             | autoscaling.openshift.io/v1                 |
| [ClusterCatalog](../operatorhub_apis/clustercatalog-olm-operatorframework-io-v1.xml#clustercatalog-olm-operatorframework-io-v1)                                                                    | olm.operatorframework.io/v1                 |
| [ClusterCSIDriver](../operator_apis/clustercsidriver-operator-openshift-io-v1.xml#clustercsidriver-operator-openshift-io-v1)                                                                       | operator.openshift.io/v1                    |
| [ClusterExtension](../operatorhub_apis/clusterextension-olm-operatorframework-io-v1.xml#clusterextension-olm-operatorframework-io-v1)                                                              | olm.operatorframework.io/v1                 |
| [ClusterImagePolicy](../config_apis/clusterimagepolicy-config-openshift-io-v1.xml#clusterimagepolicy-config-openshift-io-v1)                                                                       | config.openshift.io/v1                      |
| [ClusterOperator](../config_apis/clusteroperator-config-openshift-io-v1.xml#clusteroperator-config-openshift-io-v1)                                                                                | config.openshift.io/v1                      |
| [ClusterResourceQuota](../schedule_and_quota_apis/clusterresourcequota-quota-openshift-io-v1.xml#clusterresourcequota-quota-openshift-io-v1)                                                       | quota.openshift.io/v1                       |
| [ClusterRole](../role_apis/clusterrole-authorization-openshift-io-v1.xml#clusterrole-authorization-openshift-io-v1)                                                                                | authorization.openshift.io/v1               |
| [ClusterRole](../rbac_apis/clusterrole-rbac-authorization-k8s-io-v1.xml#clusterrole-rbac-authorization-k8s-io-v1)                                                                                  | rbac.authorization.k8s.io/v1                |
| [ClusterRoleBinding](../role_apis/clusterrolebinding-authorization-openshift-io-v1.xml#clusterrolebinding-authorization-openshift-io-v1)                                                           | authorization.openshift.io/v1               |
| [ClusterRoleBinding](../rbac_apis/clusterrolebinding-rbac-authorization-k8s-io-v1.xml#clusterrolebinding-rbac-authorization-k8s-io-v1)                                                             | rbac.authorization.k8s.io/v1                |
| [ClusterServiceVersion](../operatorhub_apis/clusterserviceversion-operators-coreos-com-v1alpha1.xml#clusterserviceversion-operators-coreos-com-v1alpha1)                                           | operators.coreos.com/v1alpha1               |
| [ClusterUserDefinedNetwork](../network_apis/clusteruserdefinednetwork-k8s-ovn-org-v1.xml#clusteruserdefinednetwork-k8s-ovn-org-v1)                                                                 | k8s.ovn.org/v1                              |
| [ClusterVersion](../config_apis/clusterversion-config-openshift-io-v1.xml#clusterversion-config-openshift-io-v1)                                                                                   | config.openshift.io/v1                      |
| [ComponentStatus](../metadata_apis/componentstatus-v1.xml#componentstatus-v1)                                                                                                                      | v1                                          |
| [Config](../operator_apis/config-imageregistry-operator-openshift-io-v1.xml#config-imageregistry-operator-openshift-io-v1)                                                                         | imageregistry.operator.openshift.io/v1      |
| [Config](../operator_apis/config-operator-openshift-io-v1.xml#config-operator-openshift-io-v1)                                                                                                     | operator.openshift.io/v1                    |
| [Config](../operator_apis/config-samples-operator-openshift-io-v1.xml#config-samples-operator-openshift-io-v1)                                                                                     | samples.operator.openshift.io/v1            |
| [ConfigMap](../metadata_apis/configmap-v1.xml#configmap-v1)                                                                                                                                        | v1                                          |
| [Console](../config_apis/console-config-openshift-io-v1.xml#console-config-openshift-io-v1)                                                                                                        | config.openshift.io/v1                      |
| [Console](../operator_apis/console-operator-openshift-io-v1.xml#console-operator-openshift-io-v1)                                                                                                  | operator.openshift.io/v1                    |
| [ConsoleCLIDownload](../console_apis/consoleclidownload-console-openshift-io-v1.xml#consoleclidownload-console-openshift-io-v1)                                                                    | console.openshift.io/v1                     |
| [ConsoleExternalLogLink](../console_apis/consoleexternalloglink-console-openshift-io-v1.xml#consoleexternalloglink-console-openshift-io-v1)                                                        | console.openshift.io/v1                     |
| [ConsoleLink](../console_apis/consolelink-console-openshift-io-v1.xml#consolelink-console-openshift-io-v1)                                                                                         | console.openshift.io/v1                     |
| [ConsoleNotification](../console_apis/consolenotification-console-openshift-io-v1.xml#consolenotification-console-openshift-io-v1)                                                                 | console.openshift.io/v1                     |
| [ConsolePlugin](../console_apis/consoleplugin-console-openshift-io-v1.xml#consoleplugin-console-openshift-io-v1)                                                                                   | console.openshift.io/v1                     |
| [ConsoleQuickStart](../console_apis/consolequickstart-console-openshift-io-v1.xml#consolequickstart-console-openshift-io-v1)                                                                       | console.openshift.io/v1                     |
| [ConsoleSample](../console_apis/consolesample-console-openshift-io-v1.xml#consolesample-console-openshift-io-v1)                                                                                   | console.openshift.io/v1                     |
| [ConsoleYAMLSample](../console_apis/consoleyamlsample-console-openshift-io-v1.xml#consoleyamlsample-console-openshift-io-v1)                                                                       | console.openshift.io/v1                     |
| [ContainerRuntimeConfig](../machine_apis/containerruntimeconfig-machineconfiguration-openshift-io-v1.xml#containerruntimeconfig-machineconfiguration-openshift-io-v1)                              | machineconfiguration.openshift.io/v1        |
| [ControllerConfig](../machine_apis/controllerconfig-machineconfiguration-openshift-io-v1.xml#controllerconfig-machineconfiguration-openshift-io-v1)                                                | machineconfiguration.openshift.io/v1        |
| [ControllerRevision](../metadata_apis/controllerrevision-apps-v1.xml#controllerrevision-apps-v1)                                                                                                   | apps/v1                                     |
| [ControlPlaneMachineSet](../machine_apis/controlplanemachineset-machine-openshift-io-v1.xml#controlplanemachineset-machine-openshift-io-v1)                                                        | machine.openshift.io/v1                     |
| [CredentialsRequest](../security_apis/credentialsrequest-cloudcredential-openshift-io-v1.xml#credentialsrequest-cloudcredential-openshift-io-v1)                                                   | cloudcredential.openshift.io/v1             |
| [CronJob](../workloads_apis/cronjob-batch-v1.xml#cronjob-batch-v1)                                                                                                                                 | batch/v1                                    |
| [CSIDriver](../storage_apis/csidriver-storage-k8s-io-v1.xml#csidriver-storage-k8s-io-v1)                                                                                                           | storage.k8s.io/v1                           |
| [CSINode](../storage_apis/csinode-storage-k8s-io-v1.xml#csinode-storage-k8s-io-v1)                                                                                                                 | storage.k8s.io/v1                           |
| [CSISnapshotController](../operator_apis/csisnapshotcontroller-operator-openshift-io-v1.xml#csisnapshotcontroller-operator-openshift-io-v1)                                                        | operator.openshift.io/v1                    |
| [CSIStorageCapacity](../storage_apis/csistoragecapacity-storage-k8s-io-v1.xml#csistoragecapacity-storage-k8s-io-v1)                                                                                | storage.k8s.io/v1                           |
| [CustomResourceDefinition](../extension_apis/customresourcedefinition-apiextensions-k8s-io-v1.xml#customresourcedefinition-apiextensions-k8s-io-v1)                                                | apiextensions.k8s.io/v1                     |
| [DaemonSet](../workloads_apis/daemonset-apps-v1.xml#daemonset-apps-v1)                                                                                                                             | apps/v1                                     |
| [DataImage](../provisioning_apis/dataimage-metal3-io-v1alpha1.xml#dataimage-metal3-io-v1alpha1)                                                                                                    | metal3.io/v1alpha1                          |
| [Deployment](../workloads_apis/deployment-apps-v1.xml#deployment-apps-v1)                                                                                                                          | apps/v1                                     |
| [DeploymentConfig](../workloads_apis/deploymentconfig-apps-openshift-io-v1.xml#deploymentconfig-apps-openshift-io-v1)                                                                              | apps.openshift.io/v1                        |
| [DeploymentConfigRollback](../workloads_apis/deploymentconfigrollback-apps-openshift-io-v1.xml#deploymentconfigrollback-apps-openshift-io-v1)                                                      | apps.openshift.io/v1                        |
| [DeploymentLog](../workloads_apis/deploymentlog-apps-openshift-io-v1.xml#deploymentlog-apps-openshift-io-v1)                                                                                       | apps.openshift.io/v1                        |
| [DeploymentRequest](../workloads_apis/deploymentrequest-apps-openshift-io-v1.xml#deploymentrequest-apps-openshift-io-v1)                                                                           | apps.openshift.io/v1                        |
| [DNS](../config_apis/dns-config-openshift-io-v1.xml#dns-config-openshift-io-v1)                                                                                                                    | config.openshift.io/v1                      |
| [DNS](../operator_apis/dns-operator-openshift-io-v1.xml#dns-operator-openshift-io-v1)                                                                                                              | operator.openshift.io/v1                    |
| [DNSRecord](../operator_apis/dnsrecord-ingress-operator-openshift-io-v1.xml#dnsrecord-ingress-operator-openshift-io-v1)                                                                            | ingress.operator.openshift.io/v1            |
| [EgressFirewall](../network_apis/egressfirewall-k8s-ovn-org-v1.xml#egressfirewall-k8s-ovn-org-v1)                                                                                                  | k8s.ovn.org/v1                              |
| [EgressIP](../network_apis/egressip-k8s-ovn-org-v1.xml#egressip-k8s-ovn-org-v1)                                                                                                                    | k8s.ovn.org/v1                              |
| [EgressQoS](../network_apis/egressqos-k8s-ovn-org-v1.xml#egressqos-k8s-ovn-org-v1)                                                                                                                 | k8s.ovn.org/v1                              |
| [EgressRouter](../network_apis/egressrouter-network-operator-openshift-io-v1.xml#egressrouter-network-operator-openshift-io-v1)                                                                    | network.operator.openshift.io/v1            |
| [EgressService](../network_apis/egressservice-k8s-ovn-org-v1.xml#egressservice-k8s-ovn-org-v1)                                                                                                     | k8s.ovn.org/v1                              |
| [Endpoints](../network_apis/endpoints-v1.xml#endpoints-v1)                                                                                                                                         | v1                                          |
| [EndpointSlice](../network_apis/endpointslice-discovery-k8s-io-v1.xml#endpointslice-discovery-k8s-io-v1)                                                                                           | discovery.k8s.io/v1                         |
| [Etcd](../operator_apis/etcd-operator-openshift-io-v1.xml#etcd-operator-openshift-io-v1)                                                                                                           | operator.openshift.io/v1                    |
| [Event](../metadata_apis/event-v1.xml#event-v1)                                                                                                                                                    | v1                                          |
| [Event](../metadata_apis/event-events-k8s-io-v1.xml#event-events-k8s-io-v1)                                                                                                                        | events.k8s.io/v1                            |
| [Eviction](../policy_apis/eviction-policy-v1.xml#eviction-policy-v1)                                                                                                                               | policy/v1                                   |
| [FeatureGate](../config_apis/featuregate-config-openshift-io-v1.xml#featuregate-config-openshift-io-v1)                                                                                            | config.openshift.io/v1                      |
| [FirmwareSchema](../provisioning_apis/firmwareschema-metal3-io-v1alpha1.xml#firmwareschema-metal3-io-v1alpha1)                                                                                     | metal3.io/v1alpha1                          |
| [FlowSchema](../schedule_and_quota_apis/flowschema-flowcontrol-apiserver-k8s-io-v1.xml#flowschema-flowcontrol-apiserver-k8s-io-v1)                                                                 | flowcontrol.apiserver.k8s.io/v1             |
| [Gateway](../network_apis/gateway-gateway-networking-k8s-io-v1.xml#gateway-gateway-networking-k8s-io-v1)                                                                                           | gateway.networking.k8s.io/v1                |
| [GatewayClass](../network_apis/gatewayclass-gateway-networking-k8s-io-v1.xml#gatewayclass-gateway-networking-k8s-io-v1)                                                                            | gateway.networking.k8s.io/v1                |
| [Group](../user_and_group_apis/group-user-openshift-io-v1.xml#group-user-openshift-io-v1)                                                                                                          | user.openshift.io/v1                        |
| [GRPCRoute](../network_apis/grpcroute-gateway-networking-k8s-io-v1.xml#grpcroute-gateway-networking-k8s-io-v1)                                                                                     | gateway.networking.k8s.io/v1                |
| [HardwareData](../provisioning_apis/hardwaredata-metal3-io-v1alpha1.xml#hardwaredata-metal3-io-v1alpha1)                                                                                           | metal3.io/v1alpha1                          |
| [HelmChartRepository](../config_apis/helmchartrepository-helm-openshift-io-v1beta1.xml#helmchartrepository-helm-openshift-io-v1beta1)                                                              | helm.openshift.io/v1beta1                   |
| [HorizontalPodAutoscaler](../autoscale_apis/horizontalpodautoscaler-autoscaling-v2.xml#horizontalpodautoscaler-autoscaling-v2)                                                                     | autoscaling/v2                              |
| [HostFirmwareComponents](../provisioning_apis/hostfirmwarecomponents-metal3-io-v1alpha1.xml#hostfirmwarecomponents-metal3-io-v1alpha1)                                                             | metal3.io/v1alpha1                          |
| [HostFirmwareSettings](../provisioning_apis/hostfirmwaresettings-metal3-io-v1alpha1.xml#hostfirmwaresettings-metal3-io-v1alpha1)                                                                   | metal3.io/v1alpha1                          |
| [HostUpdatePolicy](../provisioning_apis/hostupdatepolicy-metal3-io-v1alpha1.xml#hostupdatepolicy-metal3-io-v1alpha1)                                                                               | metal3.io/v1alpha1                          |
| [HTTPRoute](../network_apis/httproute-gateway-networking-k8s-io-v1.xml#httproute-gateway-networking-k8s-io-v1)                                                                                     | gateway.networking.k8s.io/v1                |
| [Identity](../user_and_group_apis/identity-user-openshift-io-v1.xml#identity-user-openshift-io-v1)                                                                                                 | user.openshift.io/v1                        |
| [Image](../config_apis/image-config-openshift-io-v1.xml#image-config-openshift-io-v1)                                                                                                              | config.openshift.io/v1                      |
| [Image](../image_apis/image-image-openshift-io-v1.xml#image-image-openshift-io-v1)                                                                                                                 | image.openshift.io/v1                       |
| [ImageContentPolicy](../config_apis/imagecontentpolicy-config-openshift-io-v1.xml#imagecontentpolicy-config-openshift-io-v1)                                                                       | config.openshift.io/v1                      |
| [ImageContentSourcePolicy](../operator_apis/imagecontentsourcepolicy-operator-openshift-io-v1alpha1.xml#imagecontentsourcepolicy-operator-openshift-io-v1alpha1)                                   | operator.openshift.io/v1alpha1              |
| [ImageDigestMirrorSet](../config_apis/imagedigestmirrorset-config-openshift-io-v1.xml#imagedigestmirrorset-config-openshift-io-v1)                                                                 | config.openshift.io/v1                      |
| [ImagePolicy](../config_apis/imagepolicy-config-openshift-io-v1.xml#imagepolicy-config-openshift-io-v1)                                                                                            | config.openshift.io/v1                      |
| [ImagePruner](../operator_apis/imagepruner-imageregistry-operator-openshift-io-v1.xml#imagepruner-imageregistry-operator-openshift-io-v1)                                                          | imageregistry.operator.openshift.io/v1      |
| [ImageSignature](../image_apis/imagesignature-image-openshift-io-v1.xml#imagesignature-image-openshift-io-v1)                                                                                      | image.openshift.io/v1                       |
| [ImageStream](../image_apis/imagestream-image-openshift-io-v1.xml#imagestream-image-openshift-io-v1)                                                                                               | image.openshift.io/v1                       |
| [ImageStreamImage](../image_apis/imagestreamimage-image-openshift-io-v1.xml#imagestreamimage-image-openshift-io-v1)                                                                                | image.openshift.io/v1                       |
| [ImageStreamImport](../image_apis/imagestreamimport-image-openshift-io-v1.xml#imagestreamimport-image-openshift-io-v1)                                                                             | image.openshift.io/v1                       |
| [ImageStreamLayers](../image_apis/imagestreamlayers-image-openshift-io-v1.xml#imagestreamlayers-image-openshift-io-v1)                                                                             | image.openshift.io/v1                       |
| [ImageStreamMapping](../image_apis/imagestreammapping-image-openshift-io-v1.xml#imagestreammapping-image-openshift-io-v1)                                                                          | image.openshift.io/v1                       |
| [ImageStreamTag](../image_apis/imagestreamtag-image-openshift-io-v1.xml#imagestreamtag-image-openshift-io-v1)                                                                                      | image.openshift.io/v1                       |
| [ImageTag](../image_apis/imagetag-image-openshift-io-v1.xml#imagetag-image-openshift-io-v1)                                                                                                        | image.openshift.io/v1                       |
| [ImageTagMirrorSet](../config_apis/imagetagmirrorset-config-openshift-io-v1.xml#imagetagmirrorset-config-openshift-io-v1)                                                                          | config.openshift.io/v1                      |
| [Infrastructure](../config_apis/infrastructure-config-openshift-io-v1.xml#infrastructure-config-openshift-io-v1)                                                                                   | config.openshift.io/v1                      |
| [Ingress](../config_apis/ingress-config-openshift-io-v1.xml#ingress-config-openshift-io-v1)                                                                                                        | config.openshift.io/v1                      |
| [Ingress](../network_apis/ingress-networking-k8s-io-v1.xml#ingress-networking-k8s-io-v1)                                                                                                           | networking.k8s.io/v1                        |
| [IngressClass](../network_apis/ingressclass-networking-k8s-io-v1.xml#ingressclass-networking-k8s-io-v1)                                                                                            | networking.k8s.io/v1                        |
| [IngressController](../operator_apis/ingresscontroller-operator-openshift-io-v1.xml#ingresscontroller-operator-openshift-io-v1)                                                                    | operator.openshift.io/v1                    |
| [InsightsOperator](../operator_apis/insightsoperator-operator-openshift-io-v1.xml#insightsoperator-operator-openshift-io-v1)                                                                       | operator.openshift.io/v1                    |
| [InstallPlan](../operatorhub_apis/installplan-operators-coreos-com-v1alpha1.xml#installplan-operators-coreos-com-v1alpha1)                                                                         | operators.coreos.com/v1alpha1               |
| [IPAddress](../cluster_apis/ipaddress-ipam-cluster-x-k8s-io-v1beta1.xml#ipaddress-ipam-cluster-x-k8s-io-v1beta1)                                                                                   | ipam.cluster.x-k8s.io/v1beta1               |
| [IPAddress](../network_apis/ipaddress-networking-k8s-io-v1.xml#ipaddress-networking-k8s-io-v1)                                                                                                     | networking.k8s.io/v1                        |
| [IPAddressClaim](../network_apis/ipaddressclaim-ipam-cluster-x-k8s-io-v1beta1.xml#ipaddressclaim-ipam-cluster-x-k8s-io-v1beta1)                                                                    | ipam.cluster.x-k8s.io/v1beta1               |
| [IPAddressClaim](../network_apis/ipaddressclaim-ipam-cluster-x-k8s-io-v1beta1.xml#ipaddressclaim-ipam-cluster-x-k8s-io-v1beta1)                                                                    | ipam.cluster.x-k8s.io/v1beta1               |
| [IPAMClaim](../network_apis/ipamclaim-k8s-cni-cncf-io-v1alpha1.xml#ipamclaim-k8s-cni-cncf-io-v1alpha1)                                                                                             | k8s.cni.cncf.io/v1alpha1                    |
| [IPPool](../network_apis/ippool-whereabouts-cni-cncf-io-v1alpha1.xml#ippool-whereabouts-cni-cncf-io-v1alpha1)                                                                                      | whereabouts.cni.cncf.io/v1alpha1            |
| [Job](../workloads_apis/job-batch-v1.xml#job-batch-v1)                                                                                                                                             | batch/v1                                    |
| [KubeAPIServer](../operator_apis/kubeapiserver-operator-openshift-io-v1.xml#kubeapiserver-operator-openshift-io-v1)                                                                                | operator.openshift.io/v1                    |
| [KubeControllerManager](../operator_apis/kubecontrollermanager-operator-openshift-io-v1.xml#kubecontrollermanager-operator-openshift-io-v1)                                                        | operator.openshift.io/v1                    |
| [KubeletConfig](../machine_apis/kubeletconfig-machineconfiguration-openshift-io-v1.xml#kubeletconfig-machineconfiguration-openshift-io-v1)                                                         | machineconfiguration.openshift.io/v1        |
| [KubeScheduler](../operator_apis/kubescheduler-operator-openshift-io-v1.xml#kubescheduler-operator-openshift-io-v1)                                                                                | operator.openshift.io/v1                    |
| [KubeStorageVersionMigrator](../operator_apis/kubestorageversionmigrator-operator-openshift-io-v1.xml#kubestorageversionmigrator-operator-openshift-io-v1)                                         | operator.openshift.io/v1                    |
| [Lease](../metadata_apis/lease-coordination-k8s-io-v1.xml#lease-coordination-k8s-io-v1)                                                                                                            | coordination.k8s.io/v1                      |
| [LimitRange](../schedule_and_quota_apis/limitrange-v1.xml#limitrange-v1)                                                                                                                           | v1                                          |
| [LocalResourceAccessReview](../authorization_apis/localresourceaccessreview-authorization-openshift-io-v1.xml#localresourceaccessreview-authorization-openshift-io-v1)                             | authorization.openshift.io/v1               |
| [LocalSubjectAccessReview](../authorization_apis/localsubjectaccessreview-authorization-k8s-io-v1.xml#localsubjectaccessreview-authorization-k8s-io-v1)                                            | authorization.k8s.io/v1                     |
| [LocalSubjectAccessReview](../authorization_apis/localsubjectaccessreview-authorization-openshift-io-v1.xml#localsubjectaccessreview-authorization-openshift-io-v1)                                | authorization.openshift.io/v1               |
| [Machine](../machine_apis/machine-machine-openshift-io-v1beta1.xml#machine-machine-openshift-io-v1beta1)                                                                                           | machine.openshift.io/v1beta1                |
| [MachineAutoscaler](../autoscale_apis/machineautoscaler-autoscaling-openshift-io-v1beta1.xml#machineautoscaler-autoscaling-openshift-io-v1beta1)                                                   | autoscaling.openshift.io/v1beta1            |
| [MachineConfig](../machine_apis/machineconfig-machineconfiguration-openshift-io-v1.xml#machineconfig-machineconfiguration-openshift-io-v1)                                                         | machineconfiguration.openshift.io/v1        |
| [MachineConfigNode](../machine_apis/machineconfignode-machineconfiguration-openshift-io-v1.xml#machineconfignode-machineconfiguration-openshift-io-v1)                                             | machineconfiguration.openshift.io/v1        |
| [MachineConfigPool](../machine_apis/machineconfigpool-machineconfiguration-openshift-io-v1.xml#machineconfigpool-machineconfiguration-openshift-io-v1)                                             | machineconfiguration.openshift.io/v1        |
| [MachineConfiguration](../operator_apis/machineconfiguration-operator-openshift-io-v1.xml#machineconfiguration-operator-openshift-io-v1)                                                           | operator.openshift.io/v1                    |
| [MachineHealthCheck](../machine_apis/machinehealthcheck-machine-openshift-io-v1beta1.xml#machinehealthcheck-machine-openshift-io-v1beta1)                                                          | machine.openshift.io/v1beta1                |
| [MachineOSBuild](../machine_apis/machineosbuild-machineconfiguration-openshift-io-v1.xml#machineosbuild-machineconfiguration-openshift-io-v1)                                                      | machineconfiguration.openshift.io/v1        |
| [MachineOSConfig](../machine_apis/machineosconfig-machineconfiguration-openshift-io-v1.xml#machineosconfig-machineconfiguration-openshift-io-v1)                                                   | machineconfiguration.openshift.io/v1        |
| [MachineSet](../machine_apis/machineset-machine-openshift-io-v1beta1.xml#machineset-machine-openshift-io-v1beta1)                                                                                  | machine.openshift.io/v1beta1                |
| [Metal3Remediation](../provisioning_apis/metal3remediation-infrastructure-cluster-x-k8s-io-v1beta1.xml#metal3remediation-infrastructure-cluster-x-k8s-io-v1beta1)                                  | infrastructure.cluster.x-k8s.io/v1beta1     |
| [Metal3RemediationTemplate](../provisioning_apis/metal3remediationtemplate-infrastructure-cluster-x-k8s-io-v1beta1.xml#metal3remediationtemplate-infrastructure-cluster-x-k8s-io-v1beta1)          | infrastructure.cluster.x-k8s.io/v1beta1     |
| [MultiNetworkPolicy](../network_apis/multinetworkpolicy-k8s-cni-cncf-io-v1beta1.xml#multinetworkpolicy-k8s-cni-cncf-io-v1beta1)                                                                    | k8s.cni.cncf.io/v1beta1                     |
| [MutatingWebhookConfiguration](../extension_apis/mutatingwebhookconfiguration-admissionregistration-k8s-io-v1.xml#mutatingwebhookconfiguration-admissionregistration-k8s-io-v1)                    | admissionregistration.k8s.io/v1             |
| [Namespace](../metadata_apis/namespace-v1.xml#namespace-v1)                                                                                                                                        | v1                                          |
| [Network](../config_apis/network-config-openshift-io-v1.xml#network-config-openshift-io-v1)                                                                                                        | config.openshift.io/v1                      |
| [Network](../operator_apis/network-operator-openshift-io-v1.xml#network-operator-openshift-io-v1)                                                                                                  | operator.openshift.io/v1                    |
| [NetworkAttachmentDefinition](../network_apis/networkattachmentdefinition-k8s-cni-cncf-io-v1.xml#networkattachmentdefinition-k8s-cni-cncf-io-v1)                                                   | k8s.cni.cncf.io/v1                          |
| [NetworkPolicy](../network_apis/networkpolicy-networking-k8s-io-v1.xml#networkpolicy-networking-k8s-io-v1)                                                                                         | networking.k8s.io/v1                        |
| [Node](../node_apis/node-v1.xml#node-v1)                                                                                                                                                           | v1                                          |
| [Node](../config_apis/node-config-openshift-io-v1.xml#node-config-openshift-io-v1)                                                                                                                 | config.openshift.io/v1                      |
| [NodeMetrics](../monitoring_apis/nodemetrics-metrics-k8s-io-v1beta1.xml#nodemetrics-metrics-k8s-io-v1beta1)                                                                                        | metrics.k8s.io/v1beta1                      |
| [NodeSlicePool](../network_apis/nodeslicepool-whereabouts-cni-cncf-io-v1alpha1.xml#nodeslicepool-whereabouts-cni-cncf-io-v1alpha1)                                                                 | whereabouts.cni.cncf.io/v1alpha1            |
| [OAuth](../config_apis/oauth-config-openshift-io-v1.xml#oauth-config-openshift-io-v1)                                                                                                              | config.openshift.io/v1                      |
| [OAuthAccessToken](../oauth_apis/oauthaccesstoken-oauth-openshift-io-v1.xml#oauthaccesstoken-oauth-openshift-io-v1)                                                                                | oauth.openshift.io/v1                       |
| [OAuthAuthorizeToken](../oauth_apis/oauthauthorizetoken-oauth-openshift-io-v1.xml#oauthauthorizetoken-oauth-openshift-io-v1)                                                                       | oauth.openshift.io/v1                       |
| [OAuthClient](../oauth_apis/oauthclient-oauth-openshift-io-v1.xml#oauthclient-oauth-openshift-io-v1)                                                                                               | oauth.openshift.io/v1                       |
| [OAuthClientAuthorization](../oauth_apis/oauthclientauthorization-oauth-openshift-io-v1.xml#oauthclientauthorization-oauth-openshift-io-v1)                                                        | oauth.openshift.io/v1                       |
| [OLMConfig](../operatorhub_apis/olmconfig-operators-coreos-com-v1.xml#olmconfig-operators-coreos-com-v1)                                                                                           | operators.coreos.com/v1                     |
| [OpenShiftAPIServer](../operator_apis/openshiftapiserver-operator-openshift-io-v1.xml#openshiftapiserver-operator-openshift-io-v1)                                                                 | operator.openshift.io/v1                    |
| [OpenShiftControllerManager](../operator_apis/openshiftcontrollermanager-operator-openshift-io-v1.xml#openshiftcontrollermanager-operator-openshift-io-v1)                                         | operator.openshift.io/v1                    |
| [Operator](../operatorhub_apis/operator-operators-coreos-com-v1.xml#operator-operators-coreos-com-v1)                                                                                              | operators.coreos.com/v1                     |
| [OperatorCondition](../operatorhub_apis/operatorcondition-operators-coreos-com-v2.xml#operatorcondition-operators-coreos-com-v2)                                                                   | operators.coreos.com/v2                     |
| [OperatorGroup](../operatorhub_apis/operatorgroup-operators-coreos-com-v1.xml#operatorgroup-operators-coreos-com-v1)                                                                               | operators.coreos.com/v1                     |
| [OperatorHub](../config_apis/operatorhub-config-openshift-io-v1.xml#operatorhub-config-openshift-io-v1)                                                                                            | config.openshift.io/v1                      |
| [OperatorPKI](../operator_apis/operatorpki-network-operator-openshift-io-v1.xml#operatorpki-network-operator-openshift-io-v1)                                                                      | network.operator.openshift.io/v1            |
| [OverlappingRangeIPReservation](../network_apis/overlappingrangeipreservation-whereabouts-cni-cncf-io-v1alpha1.xml#overlappingrangeipreservation-whereabouts-cni-cncf-io-v1alpha1)                 | whereabouts.cni.cncf.io/v1alpha1            |
| [PackageManifest](../operatorhub_apis/packagemanifest-packages-operators-coreos-com-v1.xml#packagemanifest-packages-operators-coreos-com-v1)                                                       | packages.operators.coreos.com/v1            |
| [PerformanceProfile](../node_apis/performanceprofile-performance-openshift-io-v2.xml#performanceprofile-performance-openshift-io-v2)                                                               | performance.openshift.io/v2                 |
| [PersistentVolume](../storage_apis/persistentvolume-v1.xml#persistentvolume-v1)                                                                                                                    | v1                                          |
| [PersistentVolumeClaim](../storage_apis/persistentvolumeclaim-v1.xml#persistentvolumeclaim-v1)                                                                                                     | v1                                          |
| [PinnedImageSet](../machine_apis/pinnedimageset-machineconfiguration-openshift-io-v1.xml#pinnedimageset-machineconfiguration-openshift-io-v1)                                                      | machineconfiguration.openshift.io/v1        |
| [Pod](../workloads_apis/pod-v1.xml#pod-v1)                                                                                                                                                         | v1                                          |
| [PodDisruptionBudget](../policy_apis/poddisruptionbudget-policy-v1.xml#poddisruptionbudget-policy-v1)                                                                                              | policy/v1                                   |
| [PodMetrics](../monitoring_apis/podmetrics-metrics-k8s-io-v1beta1.xml#podmetrics-metrics-k8s-io-v1beta1)                                                                                           | metrics.k8s.io/v1beta1                      |
| [PodMonitor](../monitoring_apis/podmonitor-monitoring-coreos-com-v1.xml#podmonitor-monitoring-coreos-com-v1)                                                                                       | monitoring.coreos.com/v1                    |
| [PodNetworkConnectivityCheck](../network_apis/podnetworkconnectivitycheck-controlplane-operator-openshift-io-v1alpha1.xml#podnetworkconnectivitycheck-controlplane-operator-openshift-io-v1alpha1) | controlplane.operator.openshift.io/v1alpha1 |
| [PodSecurityPolicyReview](../security_apis/podsecuritypolicyreview-security-openshift-io-v1.xml#podsecuritypolicyreview-security-openshift-io-v1)                                                  | security.openshift.io/v1                    |
| [PodSecurityPolicySelfSubjectReview](../security_apis/podsecuritypolicyselfsubjectreview-security-openshift-io-v1.xml#podsecuritypolicyselfsubjectreview-security-openshift-io-v1)                 | security.openshift.io/v1                    |
| [PodSecurityPolicySubjectReview](../security_apis/podsecuritypolicysubjectreview-security-openshift-io-v1.xml#podsecuritypolicysubjectreview-security-openshift-io-v1)                             | security.openshift.io/v1                    |
| [PodTemplate](../template_apis/podtemplate-v1.xml#podtemplate-v1)                                                                                                                                  | v1                                          |
| [PreprovisioningImage](../provisioning_apis/preprovisioningimage-metal3-io-v1alpha1.xml#preprovisioningimage-metal3-io-v1alpha1)                                                                   | metal3.io/v1alpha1                          |
| [PriorityClass](../schedule_and_quota_apis/priorityclass-scheduling-k8s-io-v1.xml#priorityclass-scheduling-k8s-io-v1)                                                                              | scheduling.k8s.io/v1                        |
| [PriorityLevelConfiguration](../schedule_and_quota_apis/prioritylevelconfiguration-flowcontrol-apiserver-k8s-io-v1.xml#prioritylevelconfiguration-flowcontrol-apiserver-k8s-io-v1)                 | flowcontrol.apiserver.k8s.io/v1             |
| [Probe](../monitoring_apis/probe-monitoring-coreos-com-v1.xml#probe-monitoring-coreos-com-v1)                                                                                                      | monitoring.coreos.com/v1                    |
| [Profile](../node_apis/profile-tuned-openshift-io-v1.xml#profile-tuned-openshift-io-v1)                                                                                                            | tuned.openshift.io/v1                       |
| [Project](../config_apis/project-config-openshift-io-v1.xml#project-config-openshift-io-v1)                                                                                                        | config.openshift.io/v1                      |
| [Project](../project_apis/project-project-openshift-io-v1.xml#project-project-openshift-io-v1)                                                                                                     | project.openshift.io/v1                     |
| [ProjectHelmChartRepository](../config_apis/projecthelmchartrepository-helm-openshift-io-v1beta1.xml#projecthelmchartrepository-helm-openshift-io-v1beta1)                                         | helm.openshift.io/v1beta1                   |
| [ProjectRequest](../project_apis/projectrequest-project-openshift-io-v1.xml#projectrequest-project-openshift-io-v1)                                                                                | project.openshift.io/v1                     |
| [Prometheus](../monitoring_apis/prometheus-monitoring-coreos-com-v1.xml#prometheus-monitoring-coreos-com-v1)                                                                                       | monitoring.coreos.com/v1                    |
| [PrometheusRule](../monitoring_apis/prometheusrule-monitoring-coreos-com-v1.xml#prometheusrule-monitoring-coreos-com-v1)                                                                           | monitoring.coreos.com/v1                    |
| [Provisioning](../provisioning_apis/provisioning-metal3-io-v1alpha1.xml#provisioning-metal3-io-v1alpha1)                                                                                           | metal3.io/v1alpha1                          |
| [Proxy](../config_apis/proxy-config-openshift-io-v1.xml#proxy-config-openshift-io-v1)                                                                                                              | config.openshift.io/v1                      |
| [RangeAllocation](../security_apis/rangeallocation-security-openshift-io-v1.xml#rangeallocation-security-openshift-io-v1)                                                                          | security.openshift.io/v1                    |
| [ReferenceGrant](../network_apis/referencegrant-gateway-networking-k8s-io-v1beta1.xml#referencegrant-gateway-networking-k8s-io-v1beta1)                                                            | gateway.networking.k8s.io/v1beta1           |
| [ReplicaSet](../workloads_apis/replicaset-apps-v1.xml#replicaset-apps-v1)                                                                                                                          | apps/v1                                     |
| [ReplicationController](../workloads_apis/replicationcontroller-v1.xml#replicationcontroller-v1)                                                                                                   | v1                                          |
| [ResourceAccessReview](../authorization_apis/resourceaccessreview-authorization-openshift-io-v1.xml#resourceaccessreview-authorization-openshift-io-v1)                                            | authorization.openshift.io/v1               |
| [ResourceQuota](../schedule_and_quota_apis/resourcequota-v1.xml#resourcequota-v1)                                                                                                                  | v1                                          |
| [Role](../role_apis/role-authorization-openshift-io-v1.xml#role-authorization-openshift-io-v1)                                                                                                     | authorization.openshift.io/v1               |
| [Role](../rbac_apis/role-rbac-authorization-k8s-io-v1.xml#role-rbac-authorization-k8s-io-v1)                                                                                                       | rbac.authorization.k8s.io/v1                |
| [RoleBinding](../role_apis/rolebinding-authorization-openshift-io-v1.xml#rolebinding-authorization-openshift-io-v1)                                                                                | authorization.openshift.io/v1               |
| [RoleBinding](../rbac_apis/rolebinding-rbac-authorization-k8s-io-v1.xml#rolebinding-rbac-authorization-k8s-io-v1)                                                                                  | rbac.authorization.k8s.io/v1                |
| [RoleBindingRestriction](../role_apis/rolebindingrestriction-authorization-openshift-io-v1.xml#rolebindingrestriction-authorization-openshift-io-v1)                                               | authorization.openshift.io/v1               |
| [Route](../network_apis/route-route-openshift-io-v1.xml#route-route-openshift-io-v1)                                                                                                               | route.openshift.io/v1                       |
| [RuntimeClass](../node_apis/runtimeclass-node-k8s-io-v1.xml#runtimeclass-node-k8s-io-v1)                                                                                                           | node.k8s.io/v1                              |
| [Scale](../autoscale_apis/scale-autoscaling-v1.xml#scale-autoscaling-v1)                                                                                                                           | autoscaling/v1                              |
| [Scheduler](../config_apis/scheduler-config-openshift-io-v1.xml#scheduler-config-openshift-io-v1)                                                                                                  | config.openshift.io/v1                      |
| [Secret](../security_apis/secret-v1.xml#secret-v1)                                                                                                                                                 | v1                                          |
| [SecretList](../image_apis/secretlist-image-openshift-io-v1.xml#secretlist-image-openshift-io-v1)                                                                                                  | image.openshift.io/v1                       |
| [SecurityContextConstraints](../security_apis/securitycontextconstraints-security-openshift-io-v1.xml#securitycontextconstraints-security-openshift-io-v1)                                         | security.openshift.io/v1                    |
| [SelfSubjectAccessReview](../authorization_apis/selfsubjectaccessreview-authorization-k8s-io-v1.xml#selfsubjectaccessreview-authorization-k8s-io-v1)                                               | authorization.k8s.io/v1                     |
| [SelfSubjectReview](../authorization_apis/selfsubjectreview-authentication-k8s-io-v1.xml#selfsubjectreview-authentication-k8s-io-v1)                                                               | authentication.k8s.io/v1                    |
| [SelfSubjectRulesReview](../authorization_apis/selfsubjectrulesreview-authorization-k8s-io-v1.xml#selfsubjectrulesreview-authorization-k8s-io-v1)                                                  | authorization.k8s.io/v1                     |
| [SelfSubjectRulesReview](../authorization_apis/selfsubjectrulesreview-authorization-openshift-io-v1.xml#selfsubjectrulesreview-authorization-openshift-io-v1)                                      | authorization.openshift.io/v1               |
| [Service](../network_apis/service-v1.xml#service-v1)                                                                                                                                               | v1                                          |
| [ServiceAccount](../security_apis/serviceaccount-v1.xml#serviceaccount-v1)                                                                                                                         | v1                                          |
| [ServiceCA](../operator_apis/serviceca-operator-openshift-io-v1.xml#serviceca-operator-openshift-io-v1)                                                                                            | operator.openshift.io/v1                    |
| [ServiceCIDR](../network_apis/servicecidr-networking-k8s-io-v1.xml#servicecidr-networking-k8s-io-v1)                                                                                               | networking.k8s.io/v1                        |
| [ServiceMonitor](../monitoring_apis/servicemonitor-monitoring-coreos-com-v1.xml#servicemonitor-monitoring-coreos-com-v1)                                                                           | monitoring.coreos.com/v1                    |
| [StatefulSet](../workloads_apis/statefulset-apps-v1.xml#statefulset-apps-v1)                                                                                                                       | apps/v1                                     |
| [Storage](../operator_apis/storage-operator-openshift-io-v1.xml#storage-operator-openshift-io-v1)                                                                                                  | operator.openshift.io/v1                    |
| [StorageClass](../storage_apis/storageclass-storage-k8s-io-v1.xml#storageclass-storage-k8s-io-v1)                                                                                                  | storage.k8s.io/v1                           |
| [StorageState](../storage_apis/storagestate-migration-k8s-io-v1alpha1.xml#storagestate-migration-k8s-io-v1alpha1)                                                                                  | migration.k8s.io/v1alpha1                   |
| [StorageVersionMigration](../storage_apis/storageversionmigration-migration-k8s-io-v1alpha1.xml#storageversionmigration-migration-k8s-io-v1alpha1)                                                 | migration.k8s.io/v1alpha1                   |
| [SubjectAccessReview](../authorization_apis/subjectaccessreview-authorization-k8s-io-v1.xml#subjectaccessreview-authorization-k8s-io-v1)                                                           | authorization.k8s.io/v1                     |
| [SubjectAccessReview](../authorization_apis/subjectaccessreview-authorization-openshift-io-v1.xml#subjectaccessreview-authorization-openshift-io-v1)                                               | authorization.openshift.io/v1               |
| [SubjectRulesReview](../authorization_apis/subjectrulesreview-authorization-openshift-io-v1.xml#subjectrulesreview-authorization-openshift-io-v1)                                                  | authorization.openshift.io/v1               |
| [Subscription](../operatorhub_apis/subscription-operators-coreos-com-v1alpha1.xml#subscription-operators-coreos-com-v1alpha1)                                                                      | operators.coreos.com/v1alpha1               |
| [Template](../template_apis/template-template-openshift-io-v1.xml#template-template-openshift-io-v1)                                                                                               | template.openshift.io/v1                    |
| [TemplateInstance](../template_apis/templateinstance-template-openshift-io-v1.xml#templateinstance-template-openshift-io-v1)                                                                       | template.openshift.io/v1                    |
| [ThanosRuler](../monitoring_apis/thanosruler-monitoring-coreos-com-v1.xml#thanosruler-monitoring-coreos-com-v1)                                                                                    | monitoring.coreos.com/v1                    |
| [TokenRequest](../authorization_apis/tokenrequest-authentication-k8s-io-v1.xml#tokenrequest-authentication-k8s-io-v1)                                                                              | authentication.k8s.io/v1                    |
| [TokenReview](../authorization_apis/tokenreview-authentication-k8s-io-v1.xml#tokenreview-authentication-k8s-io-v1)                                                                                 | authentication.k8s.io/v1                    |
| [Tuned](../node_apis/tuned-tuned-openshift-io-v1.xml#tuned-tuned-openshift-io-v1)                                                                                                                  | tuned.openshift.io/v1                       |
| [User](../user_and_group_apis/user-user-openshift-io-v1.xml#user-user-openshift-io-v1)                                                                                                             | user.openshift.io/v1                        |
| [UserDefinedNetwork](../network_apis/userdefinednetwork-k8s-ovn-org-v1.xml#userdefinednetwork-k8s-ovn-org-v1)                                                                                      | k8s.ovn.org/v1                              |
| [UserIdentityMapping](../user_and_group_apis/useridentitymapping-user-openshift-io-v1.xml#useridentitymapping-user-openshift-io-v1)                                                                | user.openshift.io/v1                        |
| [UserOAuthAccessToken](../oauth_apis/useroauthaccesstoken-oauth-openshift-io-v1.xml#useroauthaccesstoken-oauth-openshift-io-v1)                                                                    | oauth.openshift.io/v1                       |
| [ValidatingAdmissionPolicy](../extension_apis/validatingadmissionpolicy-admissionregistration-k8s-io-v1.xml#validatingadmissionpolicy-admissionregistration-k8s-io-v1)                             | admissionregistration.k8s.io/v1             |
| [ValidatingAdmissionPolicyBinding](../extension_apis/validatingadmissionpolicybinding-admissionregistration-k8s-io-v1.xml#validatingadmissionpolicybinding-admissionregistration-k8s-io-v1)        | admissionregistration.k8s.io/v1             |
| [ValidatingWebhookConfiguration](../extension_apis/validatingwebhookconfiguration-admissionregistration-k8s-io-v1.xml#validatingwebhookconfiguration-admissionregistration-k8s-io-v1)              | admissionregistration.k8s.io/v1             |
| [VolumeAttachment](../storage_apis/volumeattachment-storage-k8s-io-v1.xml#volumeattachment-storage-k8s-io-v1)                                                                                      | storage.k8s.io/v1                           |
| [VolumePopulator](../storage_apis/volumepopulator-populator-storage-k8s-io-v1beta1.xml#volumepopulator-populator-storage-k8s-io-v1beta1)                                                           | populator.storage.k8s.io/v1beta1            |
| [VolumeSnapshot](../storage_apis/volumesnapshot-snapshot-storage-k8s-io-v1.xml#volumesnapshot-snapshot-storage-k8s-io-v1)                                                                          | snapshot.storage.k8s.io/v1                  |
| [VolumeSnapshotClass](../storage_apis/volumesnapshotclass-snapshot-storage-k8s-io-v1.xml#volumesnapshotclass-snapshot-storage-k8s-io-v1)                                                           | snapshot.storage.k8s.io/v1                  |
| [VolumeSnapshotContent](../storage_apis/volumesnapshotcontent-snapshot-storage-k8s-io-v1.xml#volumesnapshotcontent-snapshot-storage-k8s-io-v1)                                                     | snapshot.storage.k8s.io/v1                  |
